--- a/app/src/main/res/layout/activity_saldo.xml
+++ b/app/src/main/res/layout/activity_saldo.xml
@@ -7,13 +7,18 @@
     tools:context=".Saldo"
     android:orientation="vertical">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarSaldo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
-        android:text="Saldo Disponível"
+        android:text="@string/saldo_dispon_vel"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
